# StructuredEikonal

./: README.md
src/: CMakeLists.txt  StructuredEikonal.cu  cuda_fim.cu
